feat: 更新应用名称为 IdealRAG，替换 logo 文件，添加 API 密钥相关功能

--- a/web/src/pages/login/index.less
+++ b/web/src/pages/login/index.less
@@ -17,8 +17,20 @@
     width: 60%;
     padding: 5px, 0px, 5px, 0px;
     margin: 0 auto;
+    // text-align: center;
   }
 
+  .logo {
+    width: 65%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  .companyName {
+    font-size: 38px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    // text-align: center;
+  }
   .loginRight {
     display: flex;
     align-items: center;
@@ -36,7 +48,7 @@
       background-image: url('@/assets/svg/login-background.svg');
       background-size: cover;
       background-blend-mode: multiply;
-      filter: blur(3px);
+      filter: blur(1px);
       background-position: center;
       z-index: -1;
     }
@@ -83,6 +95,37 @@
     letter-spacing: 0em;
     height: 80px;
     margin-bottom: 69px;
+
+    // text-align: center;
+    span {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+  .loginTitler {
+    //styleName: Heading/1;
+    font-size: 38px;
+    font-weight: 600;
+    line-height: 46px;
+    letter-spacing: 0em;
+    height: 1px;
+    margin-bottom: 69px;
+    color: #ffffff;
+    align-items: center;
+    span {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+  .loginDescription {
+    //styleName: Heading/1;
+    font-size: 38px;
+    font-weight: 600;
+    line-height: 46px;
+    letter-spacing: 0em;
+    height: 10px;
+    margin-bottom: 69px;
+    color: azure;
 
     // text-align: center;
     span {
